--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.20.3",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.11.11",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
