--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.11",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
+    "npm": "^10.9.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,6 +30,7 @@
     "react-slick": "^0.30.2",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
