--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
+    "react-tag-input-component": "^2.0.2",
     "react-use": "^17.5.1",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
