--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-slick": "^0.30.2",
     "react-tag-input-component": "^2.0.2",
     "react-use": "^17.5.1",
+    "react-youtube": "^10.1.0",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
