--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.11",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "npm": "^10.9.0",
     "path": "^0.12.7",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
