--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "npm": "^10.9.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
